tests/ui/tool-attributes/tool-attributes-shadowing.stderr
error[E0433]: failed to resolve: could not find `skip` in `crablangfmt`
  --> $DIR/tool-attributes-shadowing.rs:3:12
   |
LL | #[crablangfmt::skip]
   |            ^^^^ could not find `skip` in `crablangfmt`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0433`.
